--- a/public/dusoft_duana/parametrizacion/views/GestionTerceros/Terceros/ListaTerceros.html
+++ b/public/dusoft_duana/parametrizacion/views/GestionTerceros/Terceros/ListaTerceros.html
@@ -6,6 +6,12 @@
             <span class="glyphicon glyphicon-ok"></span> Crear</button>          
         </p> 
     </div>
+    <div class="col-md-2">
+        <p class="input-group" style="margin:0 0 2px">
+            <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-click="onCrearTerceroServi()">
+            <span class="glyphicon glyphicon-ok"></span> Crear</button>          
+        </p> 
+    </div>
 
     <div class="col-md-3 pull-right">
 
