--- a/public/dusoft_duana/pedidos/views/generacionpedidos/pedidosclientes/gestionarpedidocliente.html
+++ b/public/dusoft_duana/pedidos/views/generacionpedidos/pedidosclientes/gestionarpedidocliente.html
@@ -211,7 +211,7 @@
                                     <!--<button class="btn btn-default" ng-click="gestionar_pedido()" ng-if="Pedido.get_numero_cotizacion() > 0 && Pedido.get_aprobado_cartera() === '1'" ng-disabled="Pedido.get_estado_cotizacion() == '0'">
                                         <span class="glyphicon glyphicon-ok" ></span> Generar Pedido
                                     </button>                    //-->
-                                     <button class="btn btn-default" ng-click="generarPedidoAutomaticoCliente()" ng-if="Pedido.get_numero_cotizacion() > 0 " ng-disabled="Pedido.get_estado_cotizacion() == '0'">
+                                     <button class="btn btn-default" ng-click="generarPedidoAutomaticoCliente()" ng-if="Pedido.get_numero_cotizacion() > 0 && false" ng-disabled="Pedido.get_estado_cotizacion() == '0'">
                                         <span class="glyphicon glyphicon-ok" ></span> Generar Pedido
                                     </button>    
                                 </div> 
