--- a/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotasFactura.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotasFactura.html
@@ -4,20 +4,23 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-	<div class="row">	
-		<div class="col-xs-12 col-sm-12 col-md-12 pull-right">
-		    <div class="col-xs-12 col-sm-6 col-md-2 pull-left">
-			<div class="input-group">
-			    <input ng-show="root.visibleBuscador"
-				   type="text"
-				   class="form-control"
-				   ng-keypress="buscarTercero($event);"
-				   ng-model="root.factura"
-				   placeholder="No. Factura" name="" id="" />
-			</div>
-		    </div>
-		</div>
-	</div>
+        <div class="row">	
+            <div class="col-xs-12 col-sm-12 col-md-12 pull-right">
+                <div class="col-xs-12 col-sm-6 col-md-2 pull-left">
+                    <div class="input-group">
+                        <input ng-show="root.visibleBuscador"
+                               type="text"
+                               class="form-control"
+                               ng-keypress="buscarTercero($event);"
+                               ng-model="root.factura"
+                               placeholder="No. Factura" name="" id="" />
+                        <div class="input-group-btn" >
+                            <button class="btn btn-default pull-right" type="submit" ng-click="buscarTercero({which: 13}, termino_busqueda)"><i class="glyphicon glyphicon-search"></i></button>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
         <br />
         <br />
         <div class=" table-responsive gridStyle" style="clear:both; height: 300px">
