--- a/public/dusoft_duana/pedidos/views/generacionpedidos/pedidosclientes/gestionarpedidocliente.html
+++ b/public/dusoft_duana/pedidos/views/generacionpedidos/pedidosclientes/gestionarpedidocliente.html
@@ -221,7 +221,7 @@
                                         <span class="glyphicon glyphicon-remove" ></span> Denegado Cartera 
                                     </button>
                                
-                                     <button class="btn btn-default" ng-click="gestion_cartera(1,0)" >  
+                                     <button class="btn btn-default" ng-click="gestion_cartera(1,0)"  ng-disabled="!(Pedido.observacion_cartera.length > 0)">  
                                         <span class="glyphicon glyphicon-ok" ></span> Aprobado Cartera  
                                     </button>
                                     
