--- a/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotaCredito.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotaCredito.html
@@ -71,7 +71,7 @@
         <br />
         <div class="modal-footer">
             <button type="button" class="btn btn-warning" ng-click="cerrar()">Cerrar</button>
-            <button type="button" class="btn btn-primary" ng-click="guardarNotas()">Crear</button>
+            <button type="button" class="btn btn-primary" ng-click="guardarNotas()" ng-disabled="habilitarCrear()">Crear</button>
         </div>
     </div>
 </div> 
