--- a/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotaCredito.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotaCredito.html
@@ -5,11 +5,12 @@
                 <h4 class="h4MarginTopBottom"><span >{{root.tituloNota}}</span></h4>
             </div>
             <br />
-            <div class="col-md-4" ng-if="root.mostrarConcepto">
+            <div class="row">
+                <div class="col-md-3" ng-if="root.mostrarConcepto">
                     <div class="row">
                         <div class="col-md-7">                                          
-                        <h4 class="text-center">Concepto Nota</h4>
-                            <ui-select ng-model="root.concepto" theme="select2" class="form-control selectgeneral pull-left">
+                            <h4 class="text-center">Concepto Nota</h4>
+                            <ui-select ng-model="root.concepto" ng-change="cambioConcepto()" theme="select2" class="form-control selectgeneral pull-left">
                                 <ui-select-match  placeholder="Seleccionar">{{ $select.selected.descripcion}}</ui-select-match>
                                 <ui-select-choices repeat="concepto in conceptos | filter:$select.search">
                                     {{ concepto.descripcion}}
@@ -17,11 +18,33 @@
                             </ui-select>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-4" ng-if="root.mostrarConcepto">
+
+                    <div class="row" ng-if="!habilitarValorNota()">  
+                        <div class="" >
+                            <div class="col-md-7">
+                                <h4 class="text">Valor Nota</h4>
+                                <input type="text" class="form-control" ng-model="root.impuestosnota.valorSubtotal" ng-keyup ="cambioValorNota()" name="" id="" validacion-numero-entero/>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-4" ng-if="root.mostrarConcepto">
+
+                    <div class="row" ng-if="!habilitarValorNota()"> 
+                        <div class="col-md-12">
+                            <h4 class="text">Observación</h4>
+                            <textarea  class="col-lg-12 col-md-12 col-sm-12" rows="4" ng-model='documento_ingreso.observacion' name="" placeholder="Ingresar Observación" ></textarea>
+                        </div>
+                    </div>
+                </div>
             </div>
             <br />
             <br />
 
-            <div class="table-responsive" style="clear:both; height: 5%">
+            <div class="table-responsive" style="clear:both; height: 5%" ng-if="habilitarValorNota()">
                 <div class="defaultGrid grid-responsive" ng-grid="listaNotas2" ></div>
             </div>
 
