--- a/public/dusoft_duana/pedidos/views/generacionpedidos/pedidosfarmacias/guardarpedidobase.html
+++ b/public/dusoft_duana/pedidos/views/generacionpedidos/pedidosfarmacias/guardarpedidobase.html
@@ -183,7 +183,7 @@
                     <div class="input-group navbar-form ">
 <!--&& !root.bodegaMultiple.bools-->
                         <div >                                 
-                             <button type="button" ng-disabled="(!root.pedido.getValido() ) || (root.pedido.get_numero_pedido() && root.pedido.getTipoModificacion() != '3')" class="btn btn-default btn-medium ng-scope"  ng-click="onIncluirProductos($event)" ng-validate-events="{{root.servicio.getOpcionesModulo(root.pedido).btnCrearPedido}}" ng-if="!root.pedido.get_numero_pedido()">
+                             <button type="button" ng-disabled="(!root.pedido.getValido() ) || (root.pedido.get_numero_pedido() && root.pedido.getTipoModificacion() != '3') || (root.pedido.farmaciaOrigen.centroUtilidad.bodega.codigo == '03')" class="btn btn-default btn-medium ng-scope"  ng-click="onIncluirProductos($event)" ng-validate-events="{{root.servicio.getOpcionesModulo(root.pedido).btnCrearPedido}}" ng-if="!root.pedido.get_numero_pedido()">
                                 <span class="glyphicon glyphicon-plus"></span> Incluir Productos
                             </button>
                             
@@ -209,7 +209,7 @@
 
                 </tab>
                 
-                <tab disabled="(!root.pedido.getValido() ||  root.pedido.get_numero_pedido()) || (!root.servicio.opciones.sw_cargar_plano || !root.servicio.opciones.sw_crear_pedido )"   name="cargarPlano">
+                <tab disabled="(!root.pedido.getValido() ||  root.pedido.get_numero_pedido()) || (!root.servicio.opciones.sw_cargar_plano || !root.servicio.opciones.sw_crear_pedido ) || (root.pedido.farmaciaOrigen.centroUtilidad.bodega.codigo == '03')"   name="cargarPlano">
                     <tab-heading>
                         <i class="glyphicon glyphicon-cloud-upload"></i> <b> Cargar Archivo Plano </b>
                     </tab-heading>
