se sincroniza correctamente la factura con certicamara se queda a la espera de pruebas por error de ellos

--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/ventanaMensajeSincronizacion.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/ventanaMensajeSincronizacion.html
@@ -7,6 +7,8 @@
     <h5> {{ mensaje_ws}}</h5> 
     <h4>Respuesta BD</h4> 
     <h5> {{ mensaje_bd}} </h5> 
+    <h4>Factura</h4> 
+    <h5> {{ prefijo }} - {{ numero }}</h5> 
 </div> 
 <div class="modal-footer"> 
     <button class="btn btn-primary" ng-click="cerrarVentana()" ng-disabled="" >Aceptar</button> 
