--- a/public/dusoft_duana/pedidos/views/auditoriapedidos/AuditoriaPedidos.html
+++ b/public/dusoft_duana/pedidos/views/auditoriapedidos/AuditoriaPedidos.html
@@ -116,7 +116,8 @@
         
         
         <!-- Consultar Todos los Despachos //-->
-   <tab ng-controller="AuditoriaDespachos" ng-click ="cargarListaDespachosAuditados()">
+   <!--<tab ng-controller="AuditoriaDespachos" ng-click ="cargarListaDespachosAuditados()">-->
+   <tab ng-controller="AuditoriaDespachos" >
 
             <tab-heading>
                 Despachos <span ng-show="notificacionfarmacias > 0" class="badge badge-warning"></span>
