modificacion a json de nota credito

--- a/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotaCredito.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/notas/vistaNotaCredito.html
@@ -36,7 +36,7 @@
                     <div class="row" ng-if="!habilitarValorNota()"> 
                         <div class="col-md-12">
                             <h4 class="text">Observación</h4>
-                            <textarea  class="col-lg-12 col-md-12 col-sm-12" rows="4" ng-model='documento_ingreso.observacion' name="" placeholder="Ingresar Observación" ></textarea>
+                            <textarea  class="col-lg-12 col-md-12 col-sm-12" rows="4" ng-model='root.descripcionNota' name="" placeholder="Ingresar Observación" ></textarea>
                         </div>
                     </div>
                 </div>
