--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/index.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/index.html
@@ -30,6 +30,13 @@
                 <br> 
                 <div ng-include="'views/facturacionClientes/listarFacturasEnProceso.html'"></div>  
             </tab> 
+            <tab ng-click="limpiarLocalStorageNotificacion()" ng-controller="FacturacionConsumoBarranquillaController">
+                <tab-heading >
+                    <i class=""></i>  Fact. Peñitas
+                </tab-heading>
+                <br> 
+                <div ng-include="'views/facturacionClientes/listarFacturasConsumoBarranquilla.html'"></div>  
+            </tab> 
             <tab active="activarTabFacturasConsumo" class="dropdown" ng-controller="FacturacionConsumoController" ng-click="buscarClienteFacturaTemporal($event)">
                 <tab-heading>
                     <tab-heading >
