se modifica el servicio para la facturacion de productos por consumo

--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarFacturasConsumoBarranquilla.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarFacturasConsumoBarranquilla.html
@@ -34,6 +34,16 @@
                 </div>
             </fieldset>
         </div>
+<div>
+    <fieldset>
+        <legend>facturar prueba </legend>     
+        <div class="col-md-2">
+            <div class="input-group-btn">                                                                      
+                <button type="button" class="btn btn-info pull-center" aria-expanded="false" ng-click="onBtnGenearFacturaPrueba()" >factura</button>                   
+            </div>
+        </div>
+    </fieldset>
+</div>
     </div>
 </div>
 <div class ="row"> 
