--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarFacturasConsumoBarranquilla.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarFacturasConsumoBarranquilla.html
@@ -1,98 +1,62 @@
 <br>
-<div class="col-md-12">
+<div class="row">
+    <div class="col-md-12">
 
-    <div class="row">
-        <div class="col-md-3">
-            <fieldset>
-                <legend>Farmacia</legend> 
-                <div class="row">
-                    <div class="col-md-12">                                          
-                        <ui-select ng-model="documento_ingreso.bodega_origen" theme="select2" class="form-control selectgeneral pull-left" ng-disabled="validarDesdeLink">
-                            <ui-select-match  placeholder="Seleccionar Farmacia">{{ $select.selected.nombre_tercero}}</ui-select-match>
-                            <ui-select-choices repeat="bodega in bodegas | filter:$select.search">
-                                {{ bodega.nombre_tercero}}
-                            </ui-select-choices>
-                        </ui-select>
-                    </div>
-                </div>
-            </fieldset>
-        </div>
-        <div class="col-md-3">
-
-            <fieldset>
-                <legend>Nombre del Corte</legend>                                 
-                <div class="row">  
-                    <div class="col-md-12">
-                        <input type="text" class="form-control" ng-model="root.nombre" name="" id=""/>
-                    </div>
-                </div>
-            </fieldset>
-        </div>
-        <div class="col-md-3">
-
-            <fieldset>
-                <legend>Observación</legend>                                 
-                <div class="row">  
-                    <div class="col-md-12">
-                        <textarea  class="col-lg-12 col-md-12 col-sm-12" rows="4" ng-model='root.observacion' name="" placeholder="Ingresar Observación" ng-disabled="validarDesdeLink"></textarea>
-                    </div>
-                </div>
-            </fieldset>
-        </div>
-        <div>
+        <div class="col-md-4">
             <fieldset>
                 <legend>Archivo Plano </legend>     
                 <div class="col-md-4">
                     <div class="input-group-btn">                                                                      
-                        <button type="button" class="btn btn-info pull-center" aria-expanded="false" ng-click="onBtnGenearFactura()" >Cargar Archivo</button>                   
+                        <button type="button" class="btn btn-info pull-center" aria-expanded="false" ng-click="cargarProductos()" >Cargar Archivo</button>                   
                     </div>
                 </div>
             </fieldset>
         </div>
+        <div class="col-md-3 pull-right">
+            <fieldset>
+                <legend>Buscador</legend> 
+                <div class="input-group">
+                    <div class="input-group-btn">                                                                      
+                        <button type="button" class="btn btn-default dropdown-toggle" 
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >{{filtro.descripcion}} <span class="caret"></span></button>
+                        <ul class="dropdown-menu" ng-selected="onColumnaSize(filtro.tipo)">
+                            <li ng-repeat="filtro in filtros">
+                                <a href="javascript:void(0)" ng-click="onSeleccionFiltro(filtro)">{{filtro.descripcion}}</a>
+                            </li>
+                        </ul>                                         
+                    </div>                                                 
+                    <input type="text" 
+                           class="form-control" 
+                           ng-keypress="buscarClienteFacturaTemporal($event);"  
+                           ng-model="root.termino_busqueda" 
+                           placeholder="Buscar" name="" id="" />
+                    <div class="input-group-btn" ng-show="root.visibleBotonBuscador" >                                              
+                    </div>                                                       
+                </div>
+            </fieldset>
+        </div>   
     </div>
 </div>
-<div class ="row"> 
-    <div class="{{columnaSizeBusqueda}} pull-right">
-        <fieldset>
-            <legend>Buscador</legend> 
-            <div class="input-group">
-                <div class="input-group-btn">                                                                      
-                    <button type="button" class="btn btn-default dropdown-toggle" 
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >{{filtro.descripcion}} <span class="caret"></span></button>
-                    <ul class="dropdown-menu" ng-selected="onColumnaSize(filtro.tipo)">
-                        <li ng-repeat="filtro in filtros">
-                            <a href="javascript:void(0)" ng-click="onSeleccionFiltro(filtro)">{{filtro.descripcion}}</a>
-                        </li>
-                    </ul>                                         
-                </div>                                                 
-                <input type="text" 
-                       class="form-control" 
-                       ng-keypress="buscarClienteFacturaTemporal($event);"  
-                       ng-model="root.termino_busqueda" 
-                       placeholder="Buscar" name="" id="" />
-                <div class="input-group-btn" ng-show="root.visibleBotonBuscador" >                                              
-                </div>                                                       
-            </div>
-        </fieldset>
-    </div>          
+<br>
+<br>
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="table-responsive" style="clear:both; ">
+            <div class="defaultGrid grid-responsive" ng-grid="listarConsumoBarranquillaTemporales" ></div>
+        </div>  
+        <br>
+        <br>
+        <br>
+        <div class="row text-center">
+            <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaactual == 1" ng-click="paginaAnterior()">
+                <span class="glyphicon glyphicon-chevron-left" ></span>
+            </button>
+            <button type="button" class="btn btn-default btn-medium" ng-disabled="root.itemsFacturasTemporales < 25" ng-click="paginaSiguiente()">
+                <span class="glyphicon glyphicon-chevron-right" ></span>
+            </button>
+        </div>
+    </div>
 </div>
-
-<br>
-
-<div class="table-responsive" style="clear:both; ">
-    <div class="defaultGrid grid-responsive" ng-grid="listarConsumoBarranquillaTemporales" ></div>
-</div>  
-<br>
-<br>
-<br>
-<div class="row text-center">
-    <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaactual == 1" ng-click="paginaAnterior()">
-        <span class="glyphicon glyphicon-chevron-left" ></span>
-    </button>
-    <button type="button" class="btn btn-default btn-medium" ng-disabled="root.itemsFacturasTemporales < 25" ng-click="paginaSiguiente()">
-        <span class="glyphicon glyphicon-chevron-right" ></span>
-    </button>
-</div>
-
 <visualizar-reporte></visualizar-reporte>
 
