--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarProductosBarranquilla.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarProductosBarranquilla.html
@@ -16,10 +16,10 @@
 <br>
 
 <div class="row text-center">
-    <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaactual == 1" ng-click="paginaAnterior()">
+    <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaDetalle == 1" ng-click="paginaAnteriorDetalle()">
         <span class="glyphicon glyphicon-chevron-left" ></span>
     </button>
-    <button type="button" class="btn btn-default btn-medium" ng-disabled="root.items_pedidos_clientes < 25" ng-click="paginaSiguiente()">
+    <button type="button" class="btn btn-default btn-medium" ng-disabled="root.items_pedidos_clientes < 25" ng-click="paginaSiguienteDetalle()">
         <span class="glyphicon glyphicon-chevron-right" ></span>
     </button>
 </div>
