--- a/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarProductosBarranquilla.html
+++ b/public/dusoft_duana/FacturacionDespachos/views/facturacionClientes/listarProductosBarranquilla.html
@@ -23,5 +23,6 @@
         <span class="glyphicon glyphicon-chevron-right" ></span>
     </button>
 </div>
+<visualizar-reporte></visualizar-reporte>
 
 
