--- a/public/stylesheets/facturacion/style.css
+++ b/public/stylesheets/facturacion/style.css
@@ -16,15 +16,15 @@
 * BODY
 ----------------*/
 body    { font-family: sans_serif, Verdana, helvetica, Arial;
-          font-size: 10px;
-          color:#000000;
+          font-size: 50px;
+          color:#ffce36;
           font-weight: bold;
 		margin-left: 0px;
           margin-top: 0px }
 
 table {font-family: sans_serif, Verdana, helvetica, Arial;
        font-size: 10px;
-       color: #000000;}    
+       color: #33FF68;}    
 
 /*---------------------------------------------------------------------------------------
 * FUENTES
@@ -33,143 +33,143 @@ table {font-family: sans_serif, Verdana, helvetica, Arial;
 /*normal_10 = Es el estilo para las fuentes de tamaño 10*/
 .usuario{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 10px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_10 = Es el estilo para las fuentes de tamaño 10 y color negra*/
 .normal_10{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 10px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_10N = Es el estilo para las fuentes de tamaño 10 negra y negrita*/
 .normal_10N{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 10px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_10A = Es el estilo para las fuentes de tamaño 10 y color azul*/
 .normal_12{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 12px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_10AN = Es el estilo para las fuentes de tamaño 10 azul y negrita*/
 .normal_12N{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 12px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_10_menu = Es el estilo para las fuentes de tamaño 10*/
 .normal_10_menu{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 10px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_10N_menu = Es el estilo para las fuentes de tamaño 10*/
 .normal_10N_menu{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 10px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_09 = Es el estilo para las fuentes de tamaño 10*/
 .normal_09{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 9px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_09N = Es el estilo para las fuentes de tamaño 10*/
 .normal_09N{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 9px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_09_menu = Es el estilo para las fuentes de tamaño 10*/
 .normal_09_menu{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 9px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_09N_menu = Es el estilo para las fuentes de tamaño 10*/
 .normal_09N_menu{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 9px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_11 = Es el estilo para las fuentes de tamaño 10*/
 .normal_11{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 11px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_11N = Es el estilo para las fuentes de tamaño 10*/
 .normal_11N{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 11px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*normal_11_menu = Es el estilo para las fuentes de tamaño 10*/
 .normal_11_menu{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 11px;
-                        color: #000000 }
+                        color: #33FF68 }
 
 /*normal_11N_menu = Es el estilo para las fuentes de tamaño 10*/
 .normal_11N_menu{  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 11px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 
 /*Cliente = Es el estilo del tiltulo del la cabecera con el nombre del cliente*/
 .Cliente {  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 15px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*label = Es el estilo para los label's de los campos de los modulos o submodulos*/
 .label { font-family: sans_serif, Verdana, helvetica, Arial;
                  font-size: 10px;
-                 color: #000000;
+                 color: #33FF68;
                  font-weight: bold }
 
 /*label_error = Es el estilo para cambiar el color del label, indicando el error*/
 .label_error { font-family: sans_serif, Verdana,helvetica, Arial;
                              font-size: 10px;
-                             color: #000000;
+                             color: #33FF68;
                              font-weight: bold }
 
 /*label_mark = Es el estilo para cambiar el color del label, generandolo como marca*/
 .label_mark { font-family: sans_serif, Verdana,helvetica, Arial;
               font-size: 10px;
-              color: #000000;
+              color: #33FF68;
               font-weight: bold }
 
 /*titulo_error = Es el estilo del tiltulo de los errores*/
 .titulo1 {  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 16px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*titulo_error = Es el estilo del tiltulo de los errores*/
 .titulo2 {  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 14px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*titulo_error = Es el estilo del tiltulo de los errores*/
 .titulo3 {  font-family:sans_serif, Verdana, helvetica, Arial;
                         font-size: 14px;
-                        color: #000000;
+                        color: #33FF68;
                         font-weight: bold }
 
 /*titulo_error = Es el estilo del tiltulo de los errores*/
 .titulo1_error {  font-family: sans_serif, Verdana, helvetica, Arial;
                                   font-size: 16px;
-                                  color: #000000;
+                                  color: #33FF68;
                                   font-weight: bold }
 /*titulo_error = Es el estilo del tiltulo de los errores*/
 .titulo2_error {  font-family: sans_serif, Verdana, helvetica, Arial;
                                   font-size: 16px;
-                                  color: #000000;
+                                  color: #33FF68;
                                   font-weight: bold }
 /*titulo_error = Es el estilo del tiltulo de los errores*/
 .titulo3_error {  font-family: sans_serif, Verdana, helvetica, Arial;
                                   font-size: 14px;
-                                  color: #000000;
+                                  color: #33FF68;
                                   font-weight: bold }
                                                             
 /*Estilo para las alertas en enfermeria => color rojo*/
@@ -177,7 +177,7 @@ table {font-family: sans_serif, Verdana, helvetica, Arial;
 { 
   font-family: sans_serif, Verdana,helvetica, Arial;
   font-size: 10px;
-  color: #000000;
+  color: #33FF68;
   font-weight: bold 
 }
 
@@ -211,4 +211,7 @@ div.right{text-align:right;}
 div.top  {top:0;}
 div.middle {top:50%;margin-top:-80px;}
 div.bottom  {bottom:2px;}
+header {
+    min-height: 50% !important;
+}
 
