--- a/public/dusoft_duana/documentosbodegas/views/ABC1/radicacion.html
+++ b/public/dusoft_duana/documentosbodegas/views/ABC1/radicacion.html
@@ -88,7 +88,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="col-md-12">
-                <legend> Actualización Precio Producto <span style="color: #8b0000">(Baje Costo)</span><br></legend>
+                <legend> Actualización Precio Producto <span style="color: #8b0000">(Baja Costo)</span><br></legend>
                 <div class="row">
                     <!--
                     <div class="col-md-2 col-lg-1">
@@ -128,9 +128,9 @@
                                     </li>
                                 </ul>
                             </div><!-- /btn-group -->
-                            <input type="text" class="form-control" ng-model="producto" ng-change="buscarProductos()" ng-keyup="buscarProductos()" placeholder="Buscar" name="srch-term" id="srch-term" />
+                            <input type="text" class="form-control" ng-model="producto" ng-change="buscarProductos()" placeholder="Buscar" name="srch-term" id="srch-term" />
                             <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit" ng-click="buscarProductos(termino_busqueda)"><i class="glyphicon glyphicon-search"></i></button>
+                            <button class="btn btn-default" type="submit" ng-click=""><i class="glyphicon glyphicon-search"></i></button>
                         </span>
                         </div><!-- /input-group -->
                     </div>
