--- a/public/dusoft_duana/documentosbodegas/views/ABC1/documentosGenerados.html
+++ b/public/dusoft_duana/documentosbodegas/views/ABC1/documentosGenerados.html
@@ -4,7 +4,15 @@
          ng-grid="listar_documentos_ajuste">
     </div>
 </div>
-
+<br />
+<div class="row text-center">
+    <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaActualDocumentos == 1" ng-click="paginaAnteriorDocumentos()">
+        <span class="glyphicon glyphicon-chevron-left" ></span>
+    </button>
+    <button type="button" class="btn btn-default btn-medium" ng-disabled="!masListarDocumentos" ng-click="paginaSiguienteDocumentos()">
+        <span class="glyphicon glyphicon-chevron-right" ></span>
+    </button>
+</div>
 <!--
 <div class="col-sm-12" style="font-size: 16px; text-align: center;">
     <div class="col-sm-1" style="border: 1px solid #dedede; border-bottom: 3px solid #dedede; padding-top: 6px;">Fecha<br>Del Ajuste</div>
