--- a/public/dusoft_duana/documentosbodegas/views/ASC1/documentosGenerados.html
+++ b/public/dusoft_duana/documentosbodegas/views/ASC1/documentosGenerados.html
@@ -4,7 +4,15 @@
          ng-grid="listar_documentos_ajuste">
     </div>
 </div>
-
+<br />
+<div class="row text-center">
+    <button type="button" class="btn btn-default btn-medium" ng-disabled="paginaActualDocumentos == 1" ng-click="paginaAnteriorDocumentos()">
+        <span class="glyphicon glyphicon-chevron-left" ></span>
+    </button>
+    <button type="button" class="btn btn-default btn-medium" ng-disabled="!masListarDocumentos" ng-click="paginaSiguienteDocumentos()">
+        <span class="glyphicon glyphicon-chevron-right" ></span>
+    </button>
+</div>
 <!--
 <div class="col-sm-12" style="font-size: 14px;">
     <br>
@@ -37,5 +45,5 @@
     <div class="col-sm-2" style="padding: 15px; border-right: 1px solid #dedede;">Esta es la justificacion</div>
     <div class="col-sm-2" style="padding: 15px; border-right: 1px solid #dedede;">Personal que aprueba!</div>
 </div>
--->
 <hr>
+-->
