--- a/public/dusoft_duana/documentosbodegas/views/ASC1/radicacion.html
+++ b/public/dusoft_duana/documentosbodegas/views/ASC1/radicacion.html
@@ -128,7 +128,7 @@
                                 </li>
                             </ul>
                         </div><!-- /btn-group -->
-                        <input type="text" class="form-control" ng-model="producto" ng-change="buscarProductos()" ng-keyup="buscarProductos()" placeholder="Buscar" name="srch-term" id="srch-term" />
+                        <input type="text" class="form-control" ng-model="producto" ng-change="buscarProductos()" placeholder="Buscar" name="srch-term" id="srch-term" />
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit" ng-click="buscarProductos(termino_busqueda)"><i class="glyphicon glyphicon-search"></i></button>
                         </span>
