Se comento 2 bloques en el html de la vista 'Sincronizacion' los cuales mostraban el array de las cuentas que faltaban con datos vacios

--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -88,6 +88,7 @@
                                                     </div>
                                                 </div><br class="col-md-12"><br class="col-md-12">
                                             </div>
+                                            <!-- BLOQUE1 HTML QUE MOSTRABA CON DATOS VACIOS LAS CUENTAS QUE FALTABAN POR SER CREADAS
                                             <div ng-if="!category.cuenta_id" class="col-md-12" style="margin-bottom: 15px;">
                                                 <div class="col-md-12">
                                                     <input type="checkbox" style="opacity: 0;" disabled="disabled">
@@ -116,6 +117,7 @@
                                                     </div>
                                                 </div><br class="col-md-12"><br class="col-md-12">
                                             </div>
+                                            -->
                                             <hr class="linea-separadora"/>
                                         </span>
                                     </div>
@@ -155,6 +157,7 @@
                                                 </div>
                                             </div><br class="col-md-12"><br class="col-md-12">
                                         </div>
+                                        <!-- BLOQUE2 HTML QUE MOSTRABA CON DATOS VACIOS LAS CUENTAS QUE FALTABAN POR SER CREADAS
                                         <div ng-if="!category.cuenta_id" class="col-md-12" style="margin-bottom: 15px;">
                                             <div class="col-md-12">
                                                 <input type="checkbox" style="opacity: 0;" disabled="disabled">
@@ -182,7 +185,7 @@
                                                     <input type="text" class="form-control ng-pristine ng-valid ng-touched" disabled="disabled">
                                                 </div>
                                             </div><br class="col-md-12"><br class="col-md-12">
-                                        </div>
+                                        </div> -->
                                         <hr class="linea-separadora"/>
                                     </span>
                                 </div>
