--- a/public/dusoft_duana/sincronizacion/css/style.css
+++ b/public/dusoft_duana/sincronizacion/css/style.css
@@ -58,3 +58,12 @@
     padding-left: 0px;
     padding-right: 0px;
 }
+
+.form-control[disabled]{
+    background-color: #cccccc;
+}
+
+.modal-header{
+    background: #00229e;
+    color: #FFF;
+}
